--- a/taller-geo/src/app/app.component.html
+++ b/taller-geo/src/app/app.component.html
@@ -1,5 +1,1 @@
-<div class="container mt-4">
-    <div class="alert alert-success" role="alert">
-        Bootstrap esta bien instalado
-    </div>
-</div>
+<app-map></app-map>
