--- a/taller-geo/src/app/components/map/map.component.html
+++ b/taller-geo/src/app/components/map/map.component.html
@@ -6,5 +6,13 @@
                 <p>Estas aqui! latitud:{{latitude}}, longitud {{longitude}}</p>
             </agm-info-window>
         </agm-marker>
+
+        <agm-marker id="filteredPoints" *ngFor="let marker of markers" [latitude]="marker.location[0]" [longitude]="marker.location[1]">
+            <agm-info-window>
+                <h3>Punto encontrado</h3>
+                <p>Estas a {{ marker.distance }} kilometros desde este punto</p>
+            </agm-info-window>
+        </agm-marker>
+
     </agm-map>
 </div>
