Se agrega la funcionalidad del filtro radial

--- a/taller-geo/src/app/components/map/map.component.html
+++ b/taller-geo/src/app/components/map/map.component.html
@@ -1,4 +1,28 @@
 <div *ngIf="latitude && longitude">
+    <div id="floating-card" class="card mt-3 ml-3 card-over">
+        <img src="assets/bg.jpg" class="card-img-top" alt="taller geofire">
+        <div class="card-body">
+            <h5 class="card-title"> <strong>UNA |</strong> Taller geofire</h5>
+            <p class="card-text">App de geolocalización utilizando firebase, geofire y agm con angular.</p>
+        </div>
+        <ul class="list-group list-group-flush">
+            <li class="list-group-item">
+                <div class="form-group">
+                    <label for="rangeSearch">Radio de búsqueda</label>
+                    <input [(ngModel)]="rangeSearch" (change)="changeRange()" type="range" class="form-control-range" id="rangeSearch">
+                </div>
+                <div class="custom-control custom-switch">
+                    <input type="checkbox" [(ngModel)]="showRadio" class="custom-control-input" id="showRadio">
+                    <label class="custom-control-label" for="showRadio">Mostrar radio</label>
+                </div>
+                <div class="custom-control custom-switch">
+                    <input type="checkbox" [(ngModel)]="moveRadio" class="custom-control-input" id="moveRadio">
+                    <label class="custom-control-label" for="moveRadio">Mover Radio</label>
+                </div>
+            </li>
+        </ul>
+    </div>
+
     <agm-map [zoom]="11" [latitude]="latitude" [longitude]="longitude" #map name="map">
         <agm-marker [latitude]="latitude" [longitude]="longitude" [iconUrl]="icon">
             <agm-info-window>
@@ -14,5 +38,9 @@
             </agm-info-window>
         </agm-marker>
 
+        <agm-circle *ngIf="showRadio" (dragEnd)="centerChange($event)" [latitude]="latitudeSearch" [longitude]="longitudeSearch" [radius]="rangeSearch*3000" [fillOpacity]="0.2" [fillColor]=" 'blue'" [circleDraggable]="moveRadio" [editable]="false">
+        </agm-circle>
     </agm-map>
+
+
 </div>
