Se aplican mejoras de rendimiento en la aplicación

--- a/taller-geo/src/app/components/map/map.component.html
+++ b/taller-geo/src/app/components/map/map.component.html
@@ -23,7 +23,7 @@
         </ul>
     </div>
 
-    <agm-map [zoom]="11" [latitude]="latitude" [longitude]="longitude" #map name="map">
+    <agm-map (mapClick)="onMapClick($event)" [zoom]="11" [latitude]="latitude" [longitude]="longitude" #map name="map">
         <agm-marker [latitude]="latitude" [longitude]="longitude" [iconUrl]="icon">
             <agm-info-window>
                 <h3>Hola!</h3>
@@ -31,8 +31,8 @@
             </agm-info-window>
         </agm-marker>
 
-        <agm-marker id="filteredPoints" *ngFor="let marker of markers" [latitude]="marker.location[0]" [longitude]="marker.location[1]">
-            <agm-info-window>
+        <agm-marker id="filteredPoints" (markerClick)="onMarkerClick(iw)" *ngFor="let marker of markers" [latitude]="marker.location[0]" [longitude]="marker.location[1]">
+            <agm-info-window #iw>
                 <h3>Punto encontrado</h3>
                 <p>Estas a {{ marker.distance }} kilometros desde este punto</p>
             </agm-info-window>
